--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -100,7 +100,7 @@
 		"Language": "语言",
 		"dark_mode": "暗模式",
 		"spoken": "口语",
-		"insurance": "保险",
+		"insurance": "制药/研究/保险",
 		"add_more": "添加更多",
 		"company": "公司",
 		"of": "的",
@@ -170,7 +170,7 @@
 		"make_all_item_hide_untill": "隐藏所有项目，直到",
 		"patient_id": "患者ID",
 		"kyc": "KYC ",
-		"enter_healthcare_and_upload_data": "请输入您的医疗保险数据，并上传您的身份证和heathcare保险卡的副本到您的帐户",
+		"enter_healthcare_and_upload_data": "请输入您的医疗保健药业/研究/保险数据，然后将您的身份证和健康保健药业/研究/保险卡的副本上传到您的帐户中",
 		"plz_upload_png_jpg": "请上传PDF、PNG和JPEG文件",
 		"plz_uplod_doc": "请上传文档",
 		"plz_fill_all_fields": "请填写所有字段",
@@ -654,7 +654,7 @@
 		"Prescriptionisdeleted": "处方被删除",
 		"Prescriptionisarchived": "处方已存档",
 		"Prescriptionishandedtopatient": "处方交给病人",
-		"Addcompany": "添加另一家保险公司",
+		"Addcompany": "添加另一家制药/研究/保险公司",
 		"Selectentrytype": "选择输入类型",
 		"addtextentry": "添加文字输入",
 		"BodySchemeNotes": "身体方案说明",
@@ -755,8 +755,8 @@
 		"add_successfully": "成功添加",
 		"block_chain": "区块链访问",
 		"terms": "条款",
-		"insurance_comp": "保险公司",
-		"insurance_num": "保险号码",
+		"insurance_comp": "制药/研究/保险公司",
+		"insurance_num": "制药/研究/保险号码",
 		"street_address": "街道地址",
 		"privacy_policy": "隐私政策",
 		"aimedis_online_cour": "Aimedis在线课程",
@@ -1162,7 +1162,7 @@
 		"addentry": "添加条目",
 		"nurology": "神经病学",
 		"pswd_not_valid": "密码无效",
-		"InsurancecompanyError" : "请填写保险国家和保险公司",
+		"InsurancecompanyError" : "请填写制药/研究/保险国家和制药/研究/保险公司",
 		"StartDate" :"开始日期",
 		"EndDate" :"结束日期",
 		"enabled":"已启用",
@@ -1195,6 +1195,7 @@
 		"EmailExists":"电子邮件已经存在，请使用其他电子邮件。",
 		"alredypatientFav":"您已经存在于患者的私人医生名单上",
 		"Submit":"提交",
-		"select_Language":"选择语言"
+		"select_Language":"选择语言",
+		"DeleteMessages" :"删除留言"
 	}
 }
