--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -99,7 +99,7 @@
 		"Language": "Sprache",
 		"dark_mode": "Dunkler Modus",
 		"spoken": "gesprochen",
-		"insurance": "Versicherung",
+		"insurance": "Pharma / Forschung / Versicherung",
 		"add_more": "Mehr hinzufügen",
 		"company": "Gesellschaft",
 		"of": "von",
@@ -169,7 +169,7 @@
 		"make_all_item_hide_untill": "Alle Einträge unsichtbar machen bis",
 		"patient_id": "Patienten ID",
 		"kyc": "KYC ",
-		"enter_healthcare_and_upload_data": "Bitte geben Sie Ihre Krankenversicherungsdaten ein und laden Sie eine Kopie Ihres Personalausweises und Ihrer Krankenversicherungskarte in Ihr Konto hoch",
+		"enter_healthcare_and_upload_data": "Bitte geben Sie Ihre Daten zu Pharma / Forschung / Versicherung im Gesundheitswesen ein und laden Sie eine Kopie Ihres Personalausweises und Ihrer Karte für Pharma / Forschung / Versicherung im Gesundheitswesen in Ihr Konto hoch",
 		"plz_upload_png_jpg": "Bitte laden Sie eine PDF, PNG oder JPEG Datei hoch",
 		"plz_uplod_doc": "Bitte Dokumente hochladen",
 		"plz_fill_all_fields": "Bitte alle Felder ausfüllen",
@@ -650,7 +650,7 @@
 		"Prescriptionisdeleted": "Rezept wird gelöscht",
 		"Prescriptionisarchived": "Rezept ist archiviert",
 		"Prescriptionishandedtopatient": "Das Rezept wird dem Patienten ausgehändigt",
-		"Addcompany": "Fügen Sie eine weitere Versicherungsgesellschaft hinzu",
+		"Addcompany": "Fügen Sie eine weitere Pharma- / Forschungs- / Versicherungsgesellschaft hinzu",
 		"Selectentrytype": "Eintragstyp auswählen",
 		"addtextentry": "Texteingabe hinzufügen",
 		"BodySchemeNotes": "Body Scheme Notes",
@@ -751,8 +751,8 @@
 		"add_successfully": "Erfolgreich hinzugefügt",
 		"block_chain": "Blockchain Zugriff",
 		"terms": "AGB",
-		"insurance_comp": "Versicherung",
-		"insurance_num": "Versicherungsnummer",
+		"insurance_comp": "Pharma / Forschung / Versicherungsunternehmen",
+		"insurance_num": "Pharma / Forschung / Versicherungsnummer",
 		"street_address": "Straße",
 		"privacy_policy": "Datenschutz",
 		"aimedis_online_cour": "Aimedis Onlinekurse",
@@ -1141,7 +1141,7 @@
 		"ended_call_with": " beendete den Anruf mit ",
 		"cancelled_call_with": " hat den Anruf mit abgebrochen ",
 		"addentry": "Eintrag hinzufügen",
-		"InsurancecompanyError" : "Bitte füllen Sie das Versicherungsland und die Versicherungsgesellschaft aus",
+		"InsurancecompanyError" : "Bitte füllen Sie das Land Pharma / Forschung / Versicherung und Pharma / Forschung / Versicherung aus",
 		"StartDate" :"Von",
 		"EndDate" :"Bis",
 		"enabled":"aktiviert",
@@ -1174,6 +1174,7 @@
 		"EmailExists":"E-Mail ist bereits vorhanden, bitte verwenden Sie eine andere E-Mail.",
 		"alredypatientFav":"Sie befinden sich bereits auf der privaten Arztliste des Patienten",
 		"Submit":"einreichen",
-		"select_Language":"Sprache auswählen"
+		"select_Language":"Sprache auswählen",
+		"DeleteMessages" :"Nachricht löschen"
 	}
 }
