--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -98,7 +98,7 @@
 		"Language": "Language",
 		"dark_mode": "Dark mode",
 		"spoken": "spoken",
-		"insurance": "Insurance",
+		"insurance": "Pharma / Research / Insurance",
 		"add_more": "Add more",
 		"company": "Company",
 		"of": "of",
@@ -106,7 +106,7 @@
 		"profile_updated": "Profile is updated",
 		"profile_not_updated": "Profile is not updated. Can not reach to server",
 		"mobile_number_not_valid": "Mobile number is not valid",
-		"insurance_added": "Insuranse added Successfully.",
+		"insurance_added": "Insurance added Successfully.",
 		"number": "number",
 		"Delete": "Delete",
 		"de_archive": "De-archive",
@@ -168,7 +168,7 @@
 		"make_all_item_hide_untill": "Make all items HIDE until",
 		"patient_id": "Patient ID",
 		"kyc": "KYC ",
-		"enter_healthcare_and_upload_data": "Please enter your healthcare insurance data and upload a copy of your ID and heathcare insurance card into your account",
+		"enter_healthcare_and_upload_data": "Please enter your healthcare Pharma / Research / Insurance data and upload a copy of your ID and heathcare Pharma / Research / Insurance card into your account",
 		"plz_upload_png_jpg": "Please upload PDF, PNG and JPEG file",
 		"plz_uplod_doc": "Please Upload Documents",
 		"plz_fill_all_fields": "Please fill the all fields",
@@ -646,7 +646,7 @@
 		"Prescriptionisdeleted": "Prescription is deleted",
 		"Prescriptionisarchived": "Prescription is archived",
 		"Prescriptionishandedtopatient": "Prescription is handed to patient",
-		"Addcompany": "Add another insurance company",
+		"Addcompany": "Add another Pharma / Research / Insurance company",
 		"Selectentrytype": "Select entry type",
 		"addtextentry": "add text entry",
 		"BodySchemeNotes": "Body Scheme Notes",
@@ -749,8 +749,8 @@
 		"add_successfully": "Added succesfully",
 		"block_chain": "Blockchain access",
 		"terms": "Terms",
-		"insurance_comp": "Insurance company",
-		"insurance_num": "Insurance number",
+		"insurance_comp": "Pharma / Research / Insurance company",
+		"insurance_num": "Pharma / Research / Insurance number",
 		"street_address": "Street address",
 		"privacy_policy": "Privacy policy",
 		"aimedis_online_cour": "Aimedis online courses",
@@ -1144,7 +1144,7 @@
 		"ended_call_with": " ended the call with ",
 		"cancelled_call_with": " cancelled the call with ",
 		"minutes": "minutes",
-		"InsurancecompanyError" : "Please fill the Insurance country and Insurance company",
+		"InsurancecompanyError" : "Please fill the Pharma / Research / Insurance country and Pharma / Research / Insurance company",
 		"StartDate" :"Start Date",
 		"EndDate" :"End Date",
 		"Loading":"Loading...",
@@ -1174,6 +1174,7 @@
 		"EmailExists":"Email has already exists, please use another email.",
 		"alredypatientFav":"You already exist on the patient's private doctor list",
 		"Submit":"Submit",
-		"select_Language":"Select Language"
+		"select_Language":"Select Language",
+		"DeleteMessages" :"Delete Message"
 	}
 }
