--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -98,7 +98,7 @@
 		"Language": "Langue",
 		"dark_mode": "Mode sombre",
 		"spoken": "parlé",
-		"insurance": "Assurance",
+		"insurance": "Pharma / Recherche / Assurance",
 		"add_more": "Ajouter plus",
 		"company": "Société",
 		"of": "de",
@@ -168,7 +168,7 @@
 		"make_all_item_hide_untill": "Cachez tous les éléments jusqu'à ce que",
 		"patient_id": "ID du patient",
 		"kyc": "KYC ",
-		"enter_healthcare_and_upload_data": "Veuillez saisir vos données d'assurance maladie et télécharger une copie de votre carte d'identité et de votre carte d'assurance maladie sur votre compte",
+		"enter_healthcare_and_upload_data": "Veuillez saisir vos données de soins de santé Pharma / Recherche / Assurance et télécharger une copie de votre carte d'identité et de votre carte de soins de santé Pharma / Recherche / Assurance dans votre compte",
 		"plz_upload_png_jpg": "Veuillez télécharger les fichiers PDF, PNG et JPEG",
 		"plz_uplod_doc": "Veuillez télécharger les documents",
 		"plz_fill_all_fields": "Veuillez remplir tous les champs",
@@ -645,7 +645,7 @@
 		"Prescriptionisdeleted": "La prescription est supprimée",
 		"Prescriptionisarchived": "La prescription est archivée",
 		"Prescriptionishandedtopatient": "La prescription est remise au patient",
-		"Addcompany": "Ajouter une autre compagnie d'assurance",
+		"Addcompany": "Ajouter une autre société pharmaceutique / recherche / assurance",
 		"Selectentrytype": "Sélectionnez le type d'entrée",
 		"addtextentry": "ajouter une entrée de texte",
 		"BodySchemeNotes": "Notes sur le régime des organismes",
@@ -748,8 +748,8 @@
 		"add_successfully": "Ajouté avec succès",
 		"block_chain": "Accès à la chaîne de blocage",
 		"terms": "Termes",
-		"insurance_comp": "Compagnie d'assurance",
-		"insurance_num": "Numéro d'assurance",
+		"insurance_comp": "Pharma / Recherche / Compagnie d'assurance",
+		"insurance_num": "Numéro Pharma / Recherche / Assurance",
 		"street_address": "Adresse de la rue",
 		"privacy_policy": "Politique de confidentialité",
 		"aimedis_online_cour": "Cours en ligne Aimedis",
@@ -1136,7 +1136,7 @@
 		"ended_call_with": " a mis fin à l'appel avec ",
 		"cancelled_call_with": " annulé l'appel avec ",
 		"minutes": "minutes",
-		"InsurancecompanyError" : "Veuillez remplir le pays d'assurance et la compagnie d'assurance",
+		"InsurancecompanyError" : "Veuillez remplir les champs Pharma / Recherche / Assurance et Pharma / Recherche / Compagnie d'assurance",
 		"StartDate" :"Date de début",
 		"EndDate" :"Date de fin",
 		"Loading":"Chargement...",
@@ -1175,6 +1175,7 @@
 		"EmailExists":"L'e-mail existe déjà, veuillez utiliser un autre e-mail.",
 		"alredypatientFav":"Vous existez déjà sur la liste privée des médecins du patient",
 		"Submit":"Soumettre",
-		"select_Language":"Choisir la langue"
+		"select_Language":"Choisir la langue",
+		"DeleteMessages" :"Supprimer le message"
 	}
 }
