--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -118,8 +118,8 @@
 		"add_successfully": "Succesvol toegevoegd",
 		"block_chain": "Blockchain Toegang",
 		"terms": "Voorwaarden",
-		"insurance_comp": "Verzekeraar",
-		"insurance_num": "Verzekeringsnummer",
+		"insurance_comp": "Pharma / Research / Verzekeringsmaatschappij",
+		"insurance_num": "Pharma / Research / Insurance-nummer",
 		"street_address": "Huisadres",
 		"privacy_policy": "Privacybeleid",
 		"aimedis_online_cour": "Aimedis Online Cursussen",
@@ -1051,7 +1051,7 @@
 		"Language": "Taal",
 		"dark_mode": "Donkere modus",
 		"spoken": "gesproken",
-		"insurance": "Verzekering",
+		"insurance": "Farma / Onderzoek / Verzekeringen",
 		"add_more": "Voeg meer toe",
 		"company": "Bedrijf",
 		"of": "van",
@@ -1120,7 +1120,7 @@
 		"make_all_item_hide_untill": "Maak alle items VERBORGEN tot",
 		"patient_id": "Patiënt-ID",
 		"kyc": "KYC ",
-		"enter_healthcare_and_upload_data": "Voer alsjeblieft je verzekeringsgegevens in en upload een kopie van je ID en verzekeringspas op je account",
+		"enter_healthcare_and_upload_data": "Voer uw Pharma / Research / Insurance-gegevens in en upload een kopie van uw ID en Healthcare Pharma / Research / Insurance-kaart in uw account",
 		"plz_upload_png_jpg": "Upload alsjeblieft een PDF, PNG en JPEG",
 		"plz_uplod_doc": "Upload de documenten alsjeblieft",
 		"plz_fill_all_fields": "Vul alsjeblieft alle velden in",
@@ -1665,7 +1665,7 @@
 		"Prescriptionisdeleted": "Voorschrift is verwijderd",
 		"Prescriptionisarchived": "Recept wordt gearchiveerd",
 		"Prescriptionishandedtopatient": "Het recept wordt aan de patiënt overhandigd",
-		"Addcompany": "Voeg nog een verzekeringsmaatschappij toe",
+		"Addcompany": "Voeg nog een farmaceutisch / onderzoeks- / verzekeringsbedrijf toe",
 		"Selectentrytype": "Selecteer invoertype",
 		"addtextentry": "tekstinvoer toevoegen",
 		"BodySchemeNotes": "Body Scheme Notes",
@@ -1703,7 +1703,7 @@
 		"ended_call_with": " beëindigde het gesprek met ",
 		"cancelled_call_with": " annuleerde het gesprek met ",
 		"minutes":"minuten",
-		"InsurancecompanyError" : "Vul het verzekeringsland en de verzekeringsmaatschappij in",
+		"InsurancecompanyError" : "Vul het land van Pharma / Research / Insurance en Pharma / Research / Insurance company in",
 		"StartDate" :"Startdatum",
 		"EndDate" :"Einddatum",
 		"enabled": "ingeschakeld",
@@ -1799,6 +1799,7 @@
 		"EmailExists":"E-mailadres bestaat al, gebruik een ander e-mailadres.",
 		"alredypatientFav":"U staat al op de privédokterslijst van de patiënt",
 		"Submit":"Verzenden",
-		"select_Language":"Selecteer taal"
+		"select_Language":"Selecteer taal",
+		"DeleteMessages" :"Verwijder bericht"
 	}
 }
