--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -99,7 +99,7 @@
 		"Language": "Idioma",
 		"dark_mode": "Dark mode",
 		"spoken": "Falado",
-		"insurance": "Seguro",
+		"insurance": "Farma / Pesquisa / Seguros",
 		"add_more": "Acrescentar mais",
 		"company": "Companhia",
 		"of": "de",
@@ -169,7 +169,7 @@
 		"make_all_item_hide_untill": "Tornar todos os itens OCULTOS até",
 		"patient_id": "ID do paciente",
 		"kyc": "KYC ",
-		"enter_healthcare_and_upload_data": "Por favor, insira seus dados de seguro de saúde e carregue uma cópia do seu ID e cartão de seguro de saúde na sua conta",
+		"enter_healthcare_and_upload_data": "Por favor, insira seus dados de Pharma / Research / Insurance de saúde e carregue uma cópia do seu documento de identidade e cartão de Pharma / Research / Insurance de saúde em sua conta",
 		"plz_upload_png_jpg": "Por favor, envie o arquivo PDF, PNG e JPEG",
 		"plz_uplod_doc": "Por favor, faça upload dos documentos",
 		"plz_fill_all_fields": "Por favor, preencha todos os campos",
@@ -649,7 +649,7 @@
 		"Prescriptionisdeleted": "A prescrição foi excluída",
 		"Prescriptionisarchived": "A prescrição está arquivada",
 		"Prescriptionishandedtopatient": "A receita é entregue ao paciente",
-		"Addcompany": "Adicionar outra seguradora",
+		"Addcompany": "Adicionar outra companhia farmacêutica / pesquisa / seguro",
 		"Selectentrytype": "Selecione o tipo de entrada",
 		"addtextentry": "adicionar entrada de texto",
 		"BodySchemeNotes": "Notas de esquema corporal",
@@ -750,8 +750,8 @@
 		"add_successfully": "Adicionado com sucesso",
 		"block_chain": "Acesso Blockchain",
 		"terms": "Termos",
-		"insurance_comp": "Companhia de Seguros",
-		"insurance_num": "Número do Seguro",
+		"insurance_comp": "Farma / Pesquisa / Seguradora",
+		"insurance_num": "Pharma/Research/Insurance numbero",
 		"street_address": "Endereço",
 		"privacy_policy": "Política de Privacidade",
 		"aimedis_online_cour": "Cursos On-line Aimedis",
@@ -1156,7 +1156,7 @@
 		"date_to": "Data para",
 		"pls_fill_duration": "Por favor, preencha o tempo de duração do compromisso",
 		"offline": "Desligado",
-		"InsurancecompanyError" : "Preencha o país do seguro e a companhia de seguros",
+		"InsurancecompanyError" : "Preencha o campo Pharma / Research / Insurance e Pharma / Research / Insurance",
 		"StartDate" :"Data de início",
 		"EndDate" :"Data final",
 		"enabled":"ativado",
@@ -1189,6 +1189,7 @@
 		"EmailExists":"O e-mail já existe, use outro e-mail.",
 		"alredypatientFav":"Você já existe na lista particular de médicos do paciente",
 		"Submit":"Enviar",
-		"select_Language":"Selecione o idioma"
+		"select_Language":"Selecione o idioma",
+		"DeleteMessages" :"Apagar mensagem"
 	}
 }
