--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -99,7 +99,7 @@
     "Language": "Язык",
     "dark_mode": "Темный режим",
     "spoken": "поддерживаемый",
-    "insurance": "Страхование",
+    "insurance": "Фарма / Исследования / Страхование",
     "add_more": "Добавить больше",
     "company": "Компания",
     "of": "из",
@@ -169,7 +169,7 @@
     "make_all_item_hide_untill": "Сделайте все элементы невидимыми до определенного момента",
     "patient_id": "ID пациента",
     "kyc": "ЗСК ",
-    "enter_healthcare_and_upload_data": "Пожалуйста, введите данные полиса медицинского страхования и загрузите копию вашего удостоверения личности и страховой карты.",
+    "enter_healthcare_and_upload_data": "Пожалуйста, введите данные своей медицинской фармацевтики / исследований / страхования и загрузите копию своего удостоверения личности и медицинской карты / фармацевтической / исследовательской / страховой карты в свою учетную запись.",
     "plz_upload_png_jpg": "Пожалуйста, загрузите файл в формате PDF, PNG и JPEG",
     "plz_uplod_doc": "Пожалуйста, загрузите документы",
     "plz_fill_all_fields": "Пожалуйста, заполните все поля",
@@ -649,7 +649,7 @@
     "Prescriptionisdeleted": "Рецепт удален",
     "Prescriptionisarchived": "Рецепт в архиве",
     "Prescriptionishandedtopatient": "Рецепт выдается пациенту",
-    "Addcompany": "Добавить еще одну страховую компанию",
+    "Addcompany": "Добавить еще одну фармацевтическую / исследовательскую / страховую компанию",
     "Selectentrytype": "Выберите тип записи",
     "addtextentry": "добавить текстовую запись",
     "BodySchemeNotes": "Примечания к схеме тела",
@@ -750,8 +750,8 @@
     "add_successfully": "Успешно добавлен",
     "block_chain": "Доступ к блокчейну",
     "terms": "Условия",
-    "insurance_comp": "Страховая компания",
-    "insurance_num": "Страховой номер",
+    "insurance_comp": "Фарма / Исследования / Страховая компания",
+    "insurance_num": "Фарма / Исследования / Страховой номер",
     "street_address": "Точный адрес",
     "privacy_policy": "Политика конфиденциальности Aimedis",
     "aimedis_online_cour": "Онлайн-курсы",
@@ -1142,7 +1142,7 @@
     "date_to": "Дата до",
     "pls_fill_duration": "Пожалуйста, заполните поле Время приема",
     "offline": "Не в сети",
-    "InsurancecompanyError" : "Укажите страну страхования и страховую компанию",
+    "InsurancecompanyError" : "Пожалуйста, заполните Pharma / Research / Insurance country и Pharma / Research / Insurance company",
     "StartDate" :"Дата начала",
 		"EndDate" :"Дата окончания",
     "enabled":"включен",
@@ -1175,6 +1175,7 @@
     "EmailExists":"Электронный адрес уже существует, используйте другой адрес электронной почты.",
     "alredypatientFav":"Tayari upo kwenye orodha ya daktari wa kibinafsi ya mgonjwa",
     "Submit":"Разместить",
-    "select_Language":"Выбрать язык"
+    "select_Language":"Выбрать язык",
+    "DeleteMessages" :"Удалить сообщение"
   }
 }
