--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -99,7 +99,7 @@
 		"Language": "Idioma",
 		"dark_mode": "dark mode",
 		"spoken": "hablado",
-		"insurance": "Seguro",
+		"insurance": "Farmacia / Investigación / Seguros",
 		"add_more": "Adicionar más",
 		"company": "Compañía",
 		"of": "de",
@@ -169,7 +169,7 @@
 		"make_all_item_hide_untill": "Hacer todos los elementos OCULTOS hasta",
 		"patient_id": "ID del Paciente",
 		"kyc": "KYC ",
-		"enter_healthcare_and_upload_data": "Por favor Ingrese los datos de su seguro médico y cargue una copia de su ID y tarjeta de seguro médico en su cuenta",
+		"enter_healthcare_and_upload_data": "Ingrese sus datos de farmacia / investigación / seguro de atención médica y cargue una copia de su identificación y tarjeta de farmacia / investigación / seguro de salud en su cuenta",
 		"plz_upload_png_jpg": "Por favor, suba archivos PDF, PNG y JPEG",
 		"plz_uplod_doc": "Por favor, suba documentos",
 		"plz_fill_all_fields": "Por favor, complete todos los campos",
@@ -649,7 +649,7 @@
 		"Prescriptionisdeleted": "Se elimina la receta",
 		"Prescriptionisarchived": "La receta está archivada",
 		"Prescriptionishandedtopatient": "La receta se entrega al paciente",
-		"Addcompany": "Donde estas ubicado",
+		"Addcompany": "Agregar otra compañía farmacéutica / de investigación / de seguros",
 		"Selectentrytype": "Seleccionar tipo de entrada",
 		"addtextentry": "agregar entrada de texto",
 		"BodySchemeNotes": "Notas sobre el esquema corporal",
@@ -750,8 +750,8 @@
 		"add_successfully": "Agregado correctamente",
 		"block_chain": "Acceso a Blockchain",
 		"terms": "Términos",
-		"insurance_comp": "Compañía de Seguros",
-		"insurance_num": "Numero de Seguro",
+		"insurance_comp": "Compañía farmacéutica / de investigación / de seguros",
+		"insurance_num": "Número de farmacia / investigación / seguro",
 		"street_address": "Dirección",
 		"privacy_policy": "Políticas de Privacidad",
 		"aimedis_online_cour": "Cursos en Línea de Aimedis",
@@ -1146,7 +1146,7 @@
 		"forget_password": "Contraseña olvidada",
 		"Oops": "Ups",
 		"addentry": "Añadir entrada",
-		"InsurancecompanyError" : "Complete el país del seguro y la compañía de seguros",
+		"InsurancecompanyError" : "Por favor complete el país de Farma / Investigación / Seguros y Compañía Farma / Investigación / Seguros",
 		"StartDate" :"Fecha de inicio",
 		"EndDate" :"Fecha final",
 		"enabled":"habilitado",
@@ -1178,6 +1178,7 @@
 		"EmailExists":"El correo electrónico ya existe, utilice otro correo electrónico.",
 		"alredypatientFav":"Ya existe en la lista de médicos privados del paciente",
 		"Submit":"Enviar",
-		"select_Language":"Seleccione el idioma"
+		"select_Language":"Seleccione el idioma",
+		"DeleteMessages" :"Borrar mensaje"
 	}
 }
