--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -98,7 +98,7 @@
 		"Language": "Lugha",
 		"dark_mode": "Giza mode",
 		"spoken": "amesema",
-		"insurance": "Bima",
+		"insurance": "Pharma / Utafiti / Bima",
 		"add_more": "Kuongeza zaidi",
 		"company": "kampuni",
 		"of": "bila",
@@ -168,7 +168,7 @@
 		"make_all_item_hide_untill": "Kufanya vitu wote KUJIFICHA mpaka",
 		"patient_id": "Mgonjwa ID",
 		"kyc": "KYC ",
-		"enter_healthcare_and_upload_data": "Tafadhali kuingia huduma ya afya yako ya bima ya data na upload nakala ya ID yako na heathcare kadi ya bima katika akaunti yako",
+		"enter_healthcare_and_upload_data": "Tafadhali ingiza data yako ya afya ya Pharma / Utafiti / Bima na upakie nakala ya kitambulisho chako na huduma ya afya ya Pharma / Utafiti / kadi ya Bima kwenye akaunti yako",
 		"plz_upload_png_jpg": "Tafadhali upload PDF, PNG na faili JPEG",
 		"plz_uplod_doc": "Tafadhali Upload Nyaraka",
 		"plz_fill_all_fields": "Tafadhali kujaza katika nyanja zote",
@@ -648,7 +648,7 @@
 		"Prescriptionisdeleted": "Dawa imefutwa",
 		"Prescriptionisarchived": "Dawa imehifadhiwa",
 		"Prescriptionishandedtopatient": "Dawa hupewa mgonjwa",
-		"Addcompany": "Ongeza kampuni nyingine ya bima",
+		"Addcompany": "Ongeza kampuni nyingine ya Pharma / Utafiti / Bima",
 		"Selectentrytype": "Chagua aina ya kuingia",
 		"addtextentry": "ongeza kuingia kwa maandishi",
 		"BodySchemeNotes": "Vidokezo vya Mpango wa Mwili",
@@ -750,8 +750,8 @@
 		"add_successfully": "Aliongeza mafanikio",
 		"block_chain": "Ufikiaji wa blockchain",
 		"terms": "Suala",
-		"insurance_comp": "Kampuni ya Bima",
-		"insurance_num": "Bima ya Idadi",
+		"insurance_comp": "Kampuni ya Pharma / Utafiti / Bima",
+		"insurance_num": "Pharma / Utafiti / Bima ya Idadi",
 		"street_address": "na Anwani ya Mitaani",
 		"privacy_policy": "Sera ya faragha",
 		"aimedis_online_cour": "Kozi ya mkondoni ya Aimedis",
@@ -1110,7 +1110,7 @@
 		"ended_call_with": " ilimaliza simu na ",
 		"cancelled_call_with": " Kughairiwa simu na ",
 		"minutes":"dakika",
-		"InsurancecompanyError" : "Tafadhali jaza nchi ya Bima na kampuni ya Bima",
+		"InsurancecompanyError" : "Tafadhali jaza nchi ya Pharma / Utafiti / Bima na kampuni ya Pharma / Utafiti / Bima",
 		"StartDate" :"Tarehe ya Kuanza",
 		"EndDate" :"Tarehe ya mwisho",
 		"enabled": "kuwezeshwa",
@@ -1208,6 +1208,7 @@
 		"EmailExists":"Barua pepe tayari ipo, tafadhali tumia barua pepe nyingine.",
 		"alredypatientFav":"Tayari upo kwenye orodha ya daktari wa kibinafsi ya mgonjwa",
 		"Submit":"Wasilisha",
-		"select_Language":"Chagua Lugha"
+		"select_Language":"Chagua Lugha",
+		"DeleteMessages" :"Futa Ujumbe"
 	}
 }
