--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -57,7 +57,7 @@
 		"Staff_SENDREC": "SEND RECRUITMENT FORM",
 		"profile": "Profile",
 		"information": "Information",
-		"profile_info": "This is your profile information, which is accessible to your trusted Doctors and those you share your Profile ID and PIN with.",
+		"profile_info": "This is your profile information, which is accessible to your trusted doctors and those you share your Profile ID and PIN with.",
 		"ID": "ID",
 		"speciality": "Speciality",
 		"pin": "PIN",
@@ -130,7 +130,7 @@
 		"make_sure_family_doc": "Please make sure to add your Family Doctor",
 		"add_a_family_doc": "Add a family doctor",
 		"trusted_doc": "Trusted Doctors",
-		"doc_have_access_ur_journal": "These Doctors have access to your Journal. You can add as many Trusted Doctors as you want.",
+		"doc_have_access_ur_journal": "These Doctors have access to your Journal. You can add as many trusted doctors as you want.",
 		"doc_already_exit_in_list": "The Doctor is already exist in your list",
 		"doc_removed_trusted_list": "Doctor is removed from your Trusted list",
 		"remove": "Remove",
@@ -1033,7 +1033,7 @@
 		"medicine_handed_to_patient":"Medicine handed to patient",
 		"img_files":"Images & Files",
 		"Explanation":"Explanation",
-		"r_u_sure_remove_doctor":"Are you sure to remove the Doctor from the Trusted Doctor?",
+		"r_u_sure_remove_doctor":"Are you sure to remove the doctor from the trusted doctor?",
 		"paymnt_processed":"Payment successfully processed",
 		"paymnt_err":"Payment error",
 		"pay_with_stripe":"Pay with stripe",
