Add remove functionality on file uploader of  the journal, and inquiry issue, spell issues

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -438,7 +438,7 @@
 		"cmplt_ur_profile": "Vervollständigen Sie Ihr Profil",
 		"weight": "Gewicht",
 		"height": "Größe",
-		"blood": "Blut",
+		"blood": "Blutgruppe",
 		"BMI": "BMI",
 		"no_data_avlbl": "Keine Daten verfügbar",
 		"last_doc_visit": "Letzte(r) Arztbesuch(e)",
