Added marital status

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1171,7 +1171,8 @@
 		"alredypatientFav":"أنت موجود بالفعل في قائمة طبيب المريض الخاص",
 		"Submit":"إرسال",
 		"select_Language":"اختار اللغة",
-		"DeleteMessages" :"حذف رسالة"
-
+		"DeleteMessages" :"حذف رسالة",
+		"marital_status":"الزوجية الحالة",
+		"select_marital_status":"حدد الحالة الاجتماعية"
 		}
 }
