--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1178,6 +1178,8 @@
 		"select_Language":"Select Language",
 		"DeleteMessages" :"Delete Message",
 		"less_than_err":"Please upload images less than 6",
-		"err_file_formart": "System is not supported this file format"
+		"err_file_formart": "System is not supported this file format",
+		"marital_status":"Marital Status",
+		"select_marital_status":"Selcet Marital Status"
 	}
 }
