Changes in password security and Login for hospital user

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1180,6 +1180,6 @@
 		"less_than_err":"Please upload images less than 6",
 		"err_file_formart": "System is not supported this file format",
 		"marital_status":"Marital Status",
-		"select_marital_status":"Selcet Marital Status"
+		"select_marital_status":"Select Marital Status"
 	}
 }
